@@ -57,7 +57,7 @@ delete_old_files($base_dir . '/cache/secured/backups', $app_config['general']['b
 
 delete_old_files($base_dir . '/cache/events/throttling', 1, 'dat'); // Delete throttling event tracking cache files older than 1 day
 
-delete_old_files($base_dir . '/cache/events/lite_chart_rebuilds', 1, 'dat'); // Delete lite chart rebuild event tracking cache files older than 1 day
+delete_old_files($base_dir . '/cache/events/lite_chart_rebuilds', 3, 'dat'); // Delete lite chart rebuild event tracking cache files older than 3 days
 
 delete_old_files($base_dir . '/cache/secured/activation', 1, 'dat'); // Delete activation cache files older than 1 day
 
